--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="padding_main_buttons_bottom">120dp</dimen>
     <dimen name="padding_main_buttons_top">40dp</dimen>
     <dimen name="margin_button_bottom">15dp</dimen>
+
+    <dimen name="font_size_titles">30dp</dimen>
+    <dimen name="font_size_text_form">25dp</dimen>
+
 </resources>
